downgraded to v11 of java for other project committments